# Devoren

./: Cargo.toml  README.md  dev.bat
examples/: main.rs  run.rs
lib/client/src/: lib.rs
lib/http/: Cargo.toml
lib/http/src/: lib.rs  method.rs  parser.rs  request.rs  response.rs  statuscode.rs  url.rs
lib/middleware/: Cargo.toml
lib/middleware/src/: lib.rs
lib/router/: Cargo.toml
lib/router/src/: lib.rs
lib/router_macro/: Cargo.toml
lib/router_macro/src/: lib.rs
lib/thread/src/: lib.rs
public/: index.html
scripts/: dev.ps1  test.ps1
src/: devon.rs  index.html  lib.rs  route_macro.rs  router.rs  test.rs  utils.rs
src/http/: http.pest  method.rs  mod.rs  parser.rs  request.rs  response.rs
tests/: parser.rs  route.rs  url.rs
