[package]
name = "devonrex"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
router_macro = {path = "./lib/router_macro"}
router= {path = "./lib/router"}
http = { path = "./lib/http"}
client = {path = "./lib/client"}
thread = {path ="./lib/thread"}
middleware = { path ="./lib/middleware"}
